--- a/w3.css
+++ b/w3.css
@@ -256,3 +256,5 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-normal {
   font-family: 'Bebas Neue', normal;
 }
+
+p {font-size: 20px}
