--- a/w3.css
+++ b/w3.css
@@ -257,4 +257,28 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   font-family: 'Bebas Neue', normal;
 }
 
-p {font-size: 20px}
+p{font-size: 20px}
+
+.hover-text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
